[project]
name = "rimetool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argparse>=1.4.0",
    "bs4>=0.0.2",
    "chardet>=5.2.0",
    "click>=8.2.1",
    "ebooklib>=0.19",
    "flask>=3.1.2",  #rimetool-gui使用
    "flask-cors>=6.0.1", #rimetool-gui使用
    "pypinyin>=0.55.0",
    "zipp>=3.23.0",
]


[[index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
default = true
