[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rimetool"
version = "2.2.0"
description = "Rime输入法相关工具集，支持词库转换、通讯录导入等功能"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "argparse>=1.4.0",
    # "beautifulsoup4>=4.13.5",  # EPUB功能已注销
    "chardet>=5.2.0",
    "click>=8.2.1",
    # "ebooklib>=0.19",  # EPUB功能已注销
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "jieba>=0.42.1",
    "pypinyin>=0.55.0",
    "zipp>=3.23.0",
]

[project.scripts]
rimetool = "rimetool.main:main"

[tool.setuptools.packages.find]
include = ["rimetool*"]
exclude = ["rimetool_output*", "tests*"]

[tool.setuptools.package-data]
"rimetool.rimetool_gui" = ["templates/*", "templates/**/*"]

#备注：以下代码为修改至清华源下载pip包，如果不需要可以注释掉
[[index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"  
default = true
#备注结束
